tests/diagnostics/return_type_mismatch.kal
# The body's type (f64) does not match the declared return type (i64).
fn f() -> i64 = 1.0;
